--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <html>
   <head>
     <style>
-      html {
-        color-scheme: dark;
+      @media (prefers-color-scheme: dark) {
+          html {
+          color-scheme: dark;
+        }  
       }
     </style>
   </head>
   <body>
     <h1>Sandbox</h1>
+    <p>
+      I used to inspect random webpages to test things in the browser. However, 
+      many pages have too many scripts, which is annoying. So, I made this page. 
+      It's clean and simple, perfect for easy browser testing.
+    </p>
   </body>
 </html>
